[gd_scene load_steps=24 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Monsters_Script/bat.gd" type="Script" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Effects/HitEffect.png" type="Texture" id=4]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stat.tscn" type="PackedScene" id=6]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://SoftCollisions.tscn" type="PackedScene" id=8]
[ext_resource path="res://WanderController.gd" type="Script" id=9]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "HitEffect",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.00001
height = 0.0

[sub_resource type="Animation" id=5]
resource_name = "FlyLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 2, 4 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=14]
radius = 3.0
height = 0.0

[node name="bat" type="KinematicBody2D"]
position = Vector2( 192, 73 )
collision_layer = 64
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 1, 0.833335 )
frames = SubResource( 11 )
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FlyLeft = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/fly = SubResource( 4 )

[node name="SmallShadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -14 )
collision_layer = 4
collision_mask = 2

[node name="Stat" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -14 )
scale = Vector2( 1, 0.833335 )
max_health = 3

[node name="PlayerDet" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 2

[node name="SoftCollisions" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollisions" index="0"]
shape = SubResource( 14 )

[node name="WanderController" parent="." instance=ExtResource( 10 )]
script = ExtResource( 9 )

[node name="Timer" parent="WanderController" index="0"]
one_shot = true
autostart = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="WanderController/Timer" to="WanderController" method="_on_Timer_timeout"]

[editable path="HurtBox"]
[editable path="PlayerDet"]
[editable path="SoftCollisions"]
[editable path="WanderController"]
